--- a/app/Admin/Training/Home/Home.html
+++ b/app/Admin/Training/Home/Home.html
@@ -10,7 +10,7 @@
 <main class="container" role="main">
     <h1 class="page-heading">Module d'entrainement</h1>
     <div class="row">
-        <div class="col-xl-10 col-12">
+        <div class="col-md-12">
             <p>Afin de permettre aux contributeurs de {{ preferences.projectTitle }} de se former aux disciplines requises pour leur contribution, Transcribe To TEI dispose d'un module de formation et d'entrainement.<br />
             Ce module fonctionne autour de deux types de blocs : des pages de présentation et des blocs d'exercice. L'objectif est de concevoir un parcours de formation pour les utilisateurs allant des tâches les plus simples aux plus complexes.</p>
 
@@ -22,20 +22,20 @@
                     <th>#</th>
                     <th>Titre</th>
                     <th>Type</th>
-                    <th>Status</th>
-                    <th>Author</th>
-                    <th>Date</th>
+                    <th>Statut</th>
+                    <th>Référent</th>
+                    <th>Mise à jour</th>
                 </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="trainingContent in trainingContents">
-                        <td>{{ $index+1 }}</td>
+                    <tr ng-repeat="trainingContent in trainingContents|orderBy:'orderInTraining'">
+                        <td>{{ trainingContent.orderInTraining}}</td>
                         <td><a ui-sref="transcript.admin.training.edit({id: trainingContent.id})"><i class="fa fa-edit"></i></a></td>
                         <td><a ui-sref="transcript.admin.training.view({id: trainingContent.id})">{{ trainingContent.title }}</a></td>
-                        <td>{{ trainingContent.pageType }}</td>
-                        <td>{{ trainingContent.pageStatus }}</td>
-                        <td>{{ trainingContent.createUser.name }}</td>
-                        <td data-ng-bind="trainingContent.createDate | date:'dd-MM-yyyy HH:mm'"></td>
+                        <td>{{ trainingContent.pageType | trainingTypePageName }}</td>
+                        <td>{{ trainingContent.pageStatus | status | ucFirstStrict }}</td>
+                        <td>{{ trainingContent.editorialResponsibility.name }}</td>
+                        <td data-ng-bind="trainingContent.updateDate | date:'dd-MM-yyyy à HH:mm'"></td>
                     </tr>
                     <tr ng-if="trainingContents.length == 0">
                         <td colspan="7" class="bg-warning">Aucun contenu d'entrainement n'existe pour le moment. <a ui-sref="transcript.admin.training.new">Commencer à configurer le module d'entrainement</a></td>
