--- a/app/App/Training/Training.html
+++ b/app/App/Training/Training.html
@@ -7,27 +7,15 @@
     </div>
 </div>
 
-<main class="container" role="main">
+<main class="container" role="main" ng-if="trainingContent.pageStatus == 'public'">
     <div ng-include="'App/Training/tpl/training-header.html'"></div>
-    <div ng-if="trainingContent.illustration != null" class="row">
-        <div class="col-md-7" ng-include="'App/Training/tpl/training-mainContent.html'"></div>
-        <div class="col-md-5">
-            <div ng-if="isExternMedia() == true"><img src="{{ trainingContent.illustration }}" class="img-fluid" /></div>
-            <div ng-if="isExternMedia() == false"><img src="{{ api_web}}/uploads/{{ trainingContent.illustration }}" class="img-fluid" /></div>
-        </div>
-    </div>
-    <div ng-if="trainingContent.illustration == null" class="row">
-        <div class="col-md-10 col-12" ng-include="'App/Training/tpl/training-mainContent.html'"></div>
-    </div>
 
-    <hr />
-    <div class="text-center">
-        <a ng-if="trainingContent.orderInTraining-1 > 0" class="btn btn-primary" ui-sref="transcript.app.training({order: trainingContent.orderInTraining-1})"><i class="fa fa-arrow-left"></i> Page précédente</a>
-        <a class="btn btn-primary" ui-sref="transcript.app.home"><i class="fa fa-home"></i> Accueil</a>
-        <a ng-if="nextContent !== null" class="btn btn-primary" ui-sref="transcript.app.training({order: trainingContent.orderInTraining+1})"><i class="fa fa-arrow-right"></i> Page suivante</a>
-        <button ng-if="nextContent === null" class="btn btn-primary" ng-click="endTraining()">Trouver un testament</button>
-    </div>
+    <div ng-if="trainingContent.pageType == 'presentation'" ng-include="'App/Training/tpl/training-presentation.html'"></div>
+    <div ng-if="trainingContent.pageType == 'exercise'" ng-include="'App/Training/tpl/training-exercise.html'"></div>
 
     <hr />
     <div ui-view="comment"></div>
+</main>
+<main class="container" role="main" ng-if="trainingContent.pageStatus != 'public'">
+    <div class="alert alert-warning">Oups ... Cette page n'est pas publique pour le moment</div>
 </main>
