--- a/app/App/Training/tpl/training-mainContent.html
+++ b/app/App/Training/tpl/training-mainContent.html
@@ -1,4 +1,4 @@
-<div ng-bind-html="trainingContent.content"></div>
+<div ng-bind-html="trainingContent.content | trustAsHtml"></div>
 
 <div ng-if="trainingContent.videoContainer != null" class="text-center">
     <hr />
