--- a/app/index.html
+++ b/app/index.html
@@ -159,14 +159,18 @@
     <script type="text/javascript" src="System/Error/404/404.js"></script>
     <script type="text/javascript" src="System/Directives/CompileDirective.js"></script>
     <script type="text/javascript" src="System/Directives/MwConfirmClickDirective.js"></script>
+    <script type="text/javascript" src="System/Filters/ArrayRenderFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/BooleanRenderFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ClassicDateFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ContentTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/OrganisationNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/ResourceTypeNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TaxonomyEntityNameConstructFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TaxonomyNameFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/TrainingTypePageNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TranscriptionStatusNameFilter.js"></script>
     <script type="text/javascript" src="System/Filters/TrustAsHtmlFilter.js"></script>
+    <script type="text/javascript" src="System/Filters/StatusFilter.js"></script>
     <script type="text/javascript" src="System/Filters/UcFirstStrictFilter.js"></script>
     <script type="text/javascript" src="System/Filters/UserIDFromName.js"></script>
     <script type="text/javascript" src="System/Filters/WillNumberFormat.js"></script>
