--- a/app/Admin/AppPreference/AppPreference.html
+++ b/app/Admin/AppPreference/AppPreference.html
@@ -154,7 +154,7 @@
 
         <div class="row">
             <div class="text-center col-md-12">
-                <button class="btn btn-lg btn-primary" type="button" data-ng-click="submit.action()">Soumettre <i data-ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
+                <button class="btn btn-lg btn-primary" type="button" ng-click="submit.action()">Soumettre <i ng-if="submit.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
             </div>
         </div>
     </form>
