--- a/app/Admin/Home/Home.html
+++ b/app/Admin/Home/Home.html
@@ -40,13 +40,19 @@
             <h2>Notices descriptives</h2>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item" ng-if="preferences.taxonomyEditAccess == 'controlledAuthorization'"><a ui-sref="transcript.admin.taxonomy.access">Demandes d'accès <span class="badge bg-info" ng-bind="(accesses|filterTaxonomyAsk).length"></span></a></li>
-                <li class="list-group-item"><a ui-sref="transcript.admin.taxonomy.logs">Historique des modifications</a></li>
+                <li class="list-group-item"><a ui-sref="transcript.admin.taxonomy.logs.list({types: 'Place,Testator,MilitaryUnit'})">Historique des modifications</a></li>
             </ul>
         </div>
         <div class="col-sm-4 mb-5">
             <h2>Module d'entrainement</h2>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a ui-sref="transcript.admin.training.home">Module d'entrainement</a></li>
+            </ul>
+        </div>
+        <div class="col-sm-4 mb-5">
+            <h2>Transcription</h2>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a ui-sref="transcript.admin.transcript.validation">Transcriptions à valider <span class="badge bg-info" ng-bind="transcriptsToValidate.length"></span></a></li>
             </ul>
         </div>
     </div>
