--- a/app/Admin/Taxonomy/Access/Access.html
+++ b/app/Admin/Taxonomy/Access/Access.html
@@ -13,25 +13,29 @@
         <div class="col-12">
             <table class="table table-bordered">
                 <thead>
-                <th>#</th>
-                <th>User</th>
-                <th>Request</th>
-                <th>Action</th>
+                    <tr>
+                        <th>#</th>
+                        <th>User</th>
+                        <th>Request</th>
+                        <th>Action</th>
+                    </tr>
                 </thead>
-                <tr ng-repeat="access in accesses | filterTaxonomyAsk">
-                    <td>{{ $index+1 }}</td>
-                    <td><a ui-sref="transcript.app.user.profile({id: access.user.id})">{{ access.user.name }}</a></td>
-                    <td>{{ access.taxonomyRequest }}</td>
-                    <td>
-                        <div class="btn-group">
-                            <button class="btn btn-success" ng-click="submit.valid.action(access)"><i ng-if="submit.valid.loading == false" class="fa fa-check"></i><i ng-if="submit.valid.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
-                            <button class="btn btn-danger" ng-click="submit.reject.action(access)"><i ng-if="submit.reject.loading == false" class="fa fa-remove"></i><i ng-if="submit.reject.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
-                        </div>
-                    </td>
-                </tr>
-                <tr ng-if="(accesses | filterTaxonomyAsk).length == 0">
-                    <td colspan="4">Pas de demande en attente.</td>
-                </tr>
+                <tbody>
+                    <tr ng-repeat="access in accesses | filterTaxonomyAsk">
+                        <td>{{ $index+1 }}</td>
+                        <td><a ui-sref="transcript.app.user.profile({id: access.user.id})">{{ access.user.name }}</a></td>
+                        <td>{{ access.taxonomyRequest }}</td>
+                        <td>
+                            <div class="btn-group">
+                                <button class="btn btn-success" ng-click="submit.valid.action(access)"><i ng-if="submit.valid.loading == false" class="fa fa-check"></i><i ng-if="submit.valid.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
+                                <button class="btn btn-danger" ng-click="submit.reject.action(access)"><i ng-if="submit.reject.loading == false" class="fa fa-remove"></i><i ng-if="submit.reject.loading == true" class="fa fa-spin fa-circle-o-notch"></i></button>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr ng-if="(accesses | filterTaxonomyAsk).length == 0">
+                        <td colspan="4">Pas de demande en attente.</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
