--- a/app/App/User/Profile/Profile.html
+++ b/app/App/User/Profile/Profile.html
@@ -10,7 +10,7 @@
     <div class="row mb-2">
         <div class="col-md-5">
             <h1 class="page-heading mb-3">{{ iUser.name }}</h1>
-            <div><span data-ng-repeat="role in iUser.roles"><span ng-if="$index > 0"> </span><span class="badge badge-pill badge-primary">{{ role }}</span></span></div>
+            <div><span data-ng-repeat="role in iUser.roles" ng-if="role != 'ROLE_USER'"><span ng-if="$index > 0"> </span><span class="badge badge-pill badge-primary">{{ role }}</span></span></div>
             <p ng-if="iUser.biography != null" ng-bind="iUser.biography"></p>
         </div>
         <div class="col-md-2 mt-3 text-center">
